Add feature authorize